...

        <include
            android:id="@+id/comp_cpf"
            layout="@layout/comp_cpf" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/login_field_password"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:textColor="@color/colorWhite"
            android:layout_marginVertical="24dp"
            android:text="@string/login_button" />
...
