<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comp_cpf"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <br.com.eucolaborador.view.util.CpfEditText
        android:id="@+id/cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/pessoa_field_cpf"
        android:inputType="number"
        android:padding="10dp"
        android:singleLine="true" />

    <TextView
        android:id="@+id/cpfMessage"
        android:visibility="gone"
        android:textColor="@color/colorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arciform"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/cpfinvalido"
        android:textSize="20dp" />

</LinearLayout>




